// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tile ar huge 1`] = `
<style>
.S1 {
  margin-bottom: 10px;
}

.S2 {
  margin-bottom: 0px;
}

.S3 {
  color: rgba(51,51,51,1.00);
  font-family: TimesModern-Bold;
  font-size: 22px;
  font-weight: 400;
  margin-bottom: 0px;
}

.S4 {
  color: rgba(105,105,105,1.00);
  -ms-flex-wrap: wrap;
  -webkit-box-lines: multiple;
  -webkit-flex-wrap: wrap;
  flex-wrap: wrap;
  font-family: TimesDigitalW04;
  font-size: 14px;
  line-height: 20px;
  margin-bottom: 10px;
}

.IS1 {
  width: 100%;
}

.IS2 {
  line-height: 22px;
}

.IS3 {
  -webkit-line-clamp: 2;
  margin-top: 10px;
}

.IS4 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}
</style>

<Link
  linkStyle={
    Object {
      "flex": 1,
      "paddingHorizontal": "10px",
      "paddingVertical": "15px",
    }
  }
  url="/article/123"
>
  <div
    className="css-view-1dbjc4n r-marginBottom-15d164r IS1 S1"
  >
    <Image
      aspectRatio={1.7777777777777777}
      fill={true}
      uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
    />
  </div>
  <div
    className="css-view-1dbjc4n IS4"
  >
    <div
      className="css-view-1dbjc4n"
    >
      <div
        className="css-view-1dbjc4n"
      >
        <div
          className="css-view-1dbjc4n r-marginBottom-p1pxzi S2"
        >
          <ArticleLabel
            color="#005B8D"
            isVideo={false}
            title="label"
          />
        </div>
        <h3
          aria-level="3"
          className="css-reset-4rbku5 css-text-901oao r-color-1khnkhu r-fontFamily-iirzy8 r-fontSize-evnaw r-fontWeight-16dba41 r-marginBottom-p1pxzi IS2 S3"
          role="heading"
        >
          This is tile headline
        </h3>
        <div
          className="css-text-901oao css-textMultiLine-cens5h r-color-1khp51w r-flexWrap-1w6e6rj r-fontFamily-1feecvn r-fontSize-1b43r93 r-lineHeight-rjixqe r-marginBottom-15d164r IS3 S4"
        >
          <span
            className="css-text-901oao css-textHasAncestor-16my406"
          >
            
            Theresa May has two objectives tomorrow when MPs get to vote on Brexit — the trouble is both are fraught with difficulty.
            ...
          </span>
        </div>
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
        />
      </div>
    </div>
  </div>
</Link>
`;

exports[`tile ar medium 1`] = `
<style>
.S1 {
  margin-bottom: 0px;
}

.S2 {
  color: rgba(51,51,51,1.00);
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 0px;
}

.S3 {
  color: rgba(105,105,105,1.00);
  -ms-flex-wrap: wrap;
  -webkit-box-lines: multiple;
  -webkit-flex-wrap: wrap;
  flex-wrap: wrap;
  font-family: TimesDigitalW04;
  font-size: 14px;
  line-height: 20px;
  margin-bottom: 10px;
}

.IS1 {
  margin-bottom: 10px;
  width: 100%;
}

.IS2 {
  font-size: 20px;
  line-height: 20px;
}

.IS3 {
  -webkit-line-clamp: 2;
  margin-top: 10px;
}

.IS4 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}
</style>

<Link
  linkStyle={
    Object {
      "flex": 1,
      "paddingHorizontal": "10px",
      "paddingVertical": "15px",
    }
  }
  url="/article/123"
>
  <div
    className="css-view-1dbjc4n IS1"
  >
    <Image
      aspectRatio={1.7777777777777777}
      fill={true}
      uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
    />
  </div>
  <div
    className="css-view-1dbjc4n IS4"
  >
    <div
      className="css-view-1dbjc4n"
    >
      <div
        className="css-view-1dbjc4n"
      >
        <div
          className="css-view-1dbjc4n r-marginBottom-p1pxzi S1"
        >
          <ArticleLabel
            color="#005B8D"
            isVideo={false}
            title="label"
          />
        </div>
        <h3
          aria-level="3"
          className="css-reset-4rbku5 css-text-901oao r-color-1khnkhu r-fontFamily-iirzy8 r-fontWeight-16dba41 r-marginBottom-p1pxzi IS2 S2"
          role="heading"
        >
          This is tile headline
        </h3>
        <div
          className="css-text-901oao css-textMultiLine-cens5h r-color-1khp51w r-flexWrap-1w6e6rj r-fontFamily-1feecvn r-fontSize-1b43r93 r-lineHeight-rjixqe r-marginBottom-15d164r IS3 S3"
        >
          <span
            className="css-text-901oao css-textHasAncestor-16my406"
          >
            
            Theresa May has two objectives tomorrow when MPs get to vote on Brexit — the trouble is both are fraught with difficulty.
            ...
          </span>
        </div>
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
        />
      </div>
    </div>
  </div>
</Link>
`;

exports[`tile ar wide 1`] = `
<style>
.S1 {
  margin-bottom: 10px;
}

.S2 {
  margin-bottom: 0px;
}

.S3 {
  color: rgba(51,51,51,1.00);
  font-family: TimesModern-Bold;
  font-weight: 400;
  line-height: 20px;
  margin-bottom: 0px;
}

.S4 {
  color: rgba(105,105,105,1.00);
  -ms-flex-wrap: wrap;
  -webkit-box-lines: multiple;
  -webkit-flex-wrap: wrap;
  flex-wrap: wrap;
  font-family: TimesDigitalW04;
  font-size: 14px;
  line-height: 20px;
  margin-bottom: 10px;
}

.IS1 {
  width: 100%;
}

.IS2 {
  font-size: 20px;
}

.IS3 {
  -webkit-line-clamp: 2;
  margin-top: 10px;
}

.IS4 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}
</style>

<Link
  linkStyle={
    Object {
      "flex": 1,
      "paddingHorizontal": "10px",
      "paddingVertical": "15px",
    }
  }
  url="/article/123"
>
  <div
    className="css-view-1dbjc4n r-marginBottom-15d164r IS1 S1"
  >
    <Image
      aspectRatio={1.7777777777777777}
      fill={true}
      uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
    />
  </div>
  <div
    className="css-view-1dbjc4n IS4"
  >
    <div
      className="css-view-1dbjc4n"
    >
      <div
        className="css-view-1dbjc4n"
      >
        <div
          className="css-view-1dbjc4n r-marginBottom-p1pxzi S2"
        >
          <ArticleLabel
            color="#005B8D"
            isVideo={false}
            title="label"
          />
        </div>
        <h3
          aria-level="3"
          className="css-reset-4rbku5 css-text-901oao r-color-1khnkhu r-fontFamily-iirzy8 r-fontWeight-16dba41 r-lineHeight-rjixqe r-marginBottom-p1pxzi IS2 S3"
          role="heading"
        >
          This is tile headline
        </h3>
        <div
          className="css-text-901oao css-textMultiLine-cens5h r-color-1khp51w r-flexWrap-1w6e6rj r-fontFamily-1feecvn r-fontSize-1b43r93 r-lineHeight-rjixqe r-marginBottom-15d164r IS3 S4"
        >
          <span
            className="css-text-901oao css-textHasAncestor-16my406"
          >
            
            Theresa May has two objectives tomorrow when MPs get to vote on Brexit — the trouble is both are fraught with difficulty.
            ...
          </span>
        </div>
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
        />
      </div>
    </div>
  </div>
</Link>
`;

exports[`tile ar without breakpoint should be like medium 1`] = `
<style>
.S1 {
  margin-bottom: 10px;
}

.S2 {
  margin-bottom: 0px;
}

.S3 {
  color: rgba(51,51,51,1.00);
  font-family: TimesModern-Bold;
  font-weight: 400;
  line-height: 20px;
  margin-bottom: 0px;
}

.S4 {
  color: rgba(105,105,105,1.00);
  -ms-flex-wrap: wrap;
  -webkit-box-lines: multiple;
  -webkit-flex-wrap: wrap;
  flex-wrap: wrap;
  font-family: TimesDigitalW04;
  font-size: 14px;
  line-height: 20px;
  margin-bottom: 10px;
}

.IS1 {
  width: 100%;
}

.IS2 {
  font-size: 20px;
}

.IS3 {
  -webkit-line-clamp: 2;
  margin-top: 10px;
}

.IS4 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}
</style>

<Link
  linkStyle={
    Object {
      "flex": 1,
      "paddingHorizontal": "10px",
      "paddingVertical": "15px",
    }
  }
  url="/article/123"
>
  <div
    className="css-view-1dbjc4n r-marginBottom-15d164r IS1 S1"
  >
    <Image
      aspectRatio={1.7777777777777777}
      fill={true}
      uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
    />
  </div>
  <div
    className="css-view-1dbjc4n IS4"
  >
    <div
      className="css-view-1dbjc4n"
    >
      <div
        className="css-view-1dbjc4n"
      >
        <div
          className="css-view-1dbjc4n r-marginBottom-p1pxzi S2"
        >
          <ArticleLabel
            color="#005B8D"
            isVideo={false}
            title="label"
          />
        </div>
        <h3
          aria-level="3"
          className="css-reset-4rbku5 css-text-901oao r-color-1khnkhu r-fontFamily-iirzy8 r-fontWeight-16dba41 r-lineHeight-rjixqe r-marginBottom-p1pxzi IS2 S3"
          role="heading"
        >
          This is tile headline
        </h3>
        <div
          className="css-text-901oao css-textMultiLine-cens5h r-color-1khp51w r-flexWrap-1w6e6rj r-fontFamily-1feecvn r-fontSize-1b43r93 r-lineHeight-rjixqe r-marginBottom-15d164r IS3 S4"
        >
          <span
            className="css-text-901oao css-textHasAncestor-16my406"
          >
            
            Theresa May has two objectives tomorrow when MPs get to vote on Brexit — the trouble is both are fraught with difficulty.
            ...
          </span>
        </div>
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
        />
      </div>
    </div>
  </div>
</Link>
`;
